<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:layout_margin="@dimen/margin_small1"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_small1"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:text="@string/heading"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackcolor"

        android:textSize="@dimen/margin_medium1"
        android:text="@string/addtitle"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/ettitle"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"

            android:background="@drawable/createadsrounded"
            android:hint="@string/addyourtitle"/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/category"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/spincategory"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:entries="@array/spinneritems"
            android:background="@drawable/createadsrounded"
          />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/price"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/etprice"
            android:inputType="number"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:hint="Add your Price"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/adddescription"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/desc"
            android:gravity="top"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:hint="Description"/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/uploadphoto"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/img1"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:hint="Description"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:id="@+id/img2"

                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/createadsrounded"
                android:hint="Description"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:id="@+id/img3"

                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/createadsrounded"
                android:hint="Description"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:id="@+id/img4"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/createadsrounded"
                android:hint="Description"/>
        </LinearLayout>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/name"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:hint="Your name"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/phone"
            android:inputType="number"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:hint="Enter your contact no."/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/margin_medium1"
            android:text="@string/enteacity"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/city"
            android:padding="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/createadsrounded"
            android:entries="@array/spinnercity"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackcolor"
        android:textSize="@dimen/margin_medium1"
        android:text="By clicking submit you agree tp our Terms of Use amp; Postiong rules"/>


    <Button
        android:id="@+id/loginbtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="Submit"
        android:background="@drawable/roundedbutton" />
</LinearLayout>

</ScrollView>